# rag_medical_chatbot

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
app/: application.py
app/components/: data_loader.py  embeddings.py  llm.py  pdf_loader.py  retriever.py  vector_store.py
app/config/: config.py
